// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`borderStartEndRadius renders 0 1`] = `
Array [
  .c0 {
  border-start-end-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: 0;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartEndRadius renders function 1`] = `
Array [
  .c0 {
  border-start-end-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: has;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: has;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartEndRadius renders invalid theme path 1`] = `
Array [
  .c0 {
  border-start-end-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartEndRadius renders negative number 1`] = `
Array [
  .c0 {
  border-start-end-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: -54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: -42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: -42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartEndRadius renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    border-start-end-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-end-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-end-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-start-end-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    border-start-end-radius: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-end-radius: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-end-radius: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-start-end-radius: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-start-end-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-end-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-end-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-start-end-radius: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    border-start-end-radius: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-end-radius: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    border-start-end-radius: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    border-start-end-radius: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartEndRadius renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    border-start-end-radius: July;
  }
}

@media April {
  .c0 {
    border-start-end-radius: August;
  }
}

@media January {
  .c0 {
    border-start-end-radius: September;
  }
}

@media April {
  .c0 {
    border-start-end-radius: November;
  }
}

@media June {
  .c0 {
    border-start-end-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    border-start-end-radius: July;
  }
}

@media April {
  .c0 {
    border-start-end-radius: August;
  }
}

@media January {
  .c0 {
    border-start-end-radius: September;
  }
}

@media April {
  .c0 {
    border-start-end-radius: November;
  }
}

@media June {
  .c0 {
    border-start-end-radius: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-start-end-radius: January;
  }
}

@media April {
  .c0 {
    border-start-end-radius: December;
  }
}

@media January {
  .c0 {
    border-start-end-radius: April;
  }
}

@media April {
  .c0 {
    border-start-end-radius: May;
  }
}

@media June {
  .c0 {
    border-start-end-radius: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    border-start-end-radius: January;
  }
}

@media April {
  .c0 {
    border-start-end-radius: December;
  }
}

@media January {
  .c0 {
    border-start-end-radius: April;
  }
}

@media April {
  .c0 {
    border-start-end-radius: May;
  }
}

@media June {
  .c0 {
    border-start-end-radius: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartEndRadius renders postitive number 1`] = `
Array [
  .c0 {
  border-start-end-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: 54881px;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: 42365px;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: 42365px;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartEndRadius renders string 1`] = `
Array [
  .c0 {
  border-start-end-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: July;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: June;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: June;
}

<div
    className="c0"
  />,
]
`;

exports[`borderStartEndRadius renders valid theme path 1`] = `
Array [
  .c0 {
  border-start-end-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  border-start-end-radius: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
